--- a/app/src/main/res/layout/activity_tv.xml
+++ b/app/src/main/res/layout/activity_tv.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,36 +19,85 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/tvImage"
+                android:id="@+id/tvFrame"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:srcCompat="@drawable/blind" />
-
-            <TextView
-                android:id="@+id/tvText"
-                android:layout_width="match_parent"
-                android:layout_height="200px"
-                android:gravity="center_vertical"
-                android:text=""
-                android:textAlignment="center"
-                android:textSize="24dp" />
-
-
-            <EditText
-                android:id="@+id/channelTitle"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:ems="10"
-                android:hint="Enter Channel Name"
-                android:inputType="textPersonName"
-                android:text="" />
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/tvframe" />
 
             <Button
-                android:id="@+id/addChannel"
+                android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add Channel" />
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/tvFrame"
+                android:text="Turn TV ON" />
+
+            <RelativeLayout
+                android:id="@+id/linearLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="347dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/tvpad"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/volumeDown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="26dp"
+                    android:layout_toStartOf="@+id/channelUp"
+                    android:background="@android:color/transparent"
+                    android:text="" />
+
+                <Button
+                    android:id="@+id/volumeUp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/volumeDown"
+                    android:layout_alignBottom="@+id/volumeDown"
+                    android:layout_marginStart="42dp"
+                    android:layout_toEndOf="@+id/channelDown"
+                    android:background="@android:color/transparent"
+                    android:text="" />
+
+                <Button
+                    android:id="@+id/channelDown"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/volumeUp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="29dp"
+                    android:background="@android:color/transparent"
+                    android:text="" />
+
+                <Button
+                    android:id="@+id/channelUp"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/volumeUp"
+                    android:layout_alignStart="@+id/channelDown"
+                    android:layout_marginBottom="31dp"
+                    android:background="@android:color/transparent"
+                    android:text="" />
+
+                <Button
+                    android:id="@+id/enter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/volumeDown"
+                    android:layout_alignBottom="@+id/volumeDown"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/transparent"
+                    android:text="" />
+
+            </RelativeLayout>
 
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+</RelativeLayout>
