--- a/app/src/main/res/layout/auto_cb.xml
+++ b/app/src/main/res/layout/auto_cb.xml
@@ -3,6 +3,40 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/cbsave1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:layout_below="@+id/cbprogsettv"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/sbsave2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2"
+        android:layout_alignBaseline="@+id/cbsave1"
+        android:layout_alignBottom="@+id/cbsave1"
+        android:layout_toEndOf="@+id/cbsave1" />
+
+    <Button
+        android:id="@+id/cbsave3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3"
+        android:layout_below="@+id/cbprogsettv"
+        android:layout_alignStart="@+id/cbset3" />
+
+    <Button
+        android:id="@+id/cbsave4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4"
+        android:layout_alignBaseline="@+id/cbsave3"
+        android:layout_alignBottom="@+id/cbsave3"
+        android:layout_alignParentEnd="true" />
+
     <TextView
         android:id="@+id/cbvoltv"
         android:layout_width="wrap_content"
@@ -88,4 +122,20 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:text="@string/deletecb" />
+
+    <TextView
+        android:id="@+id/cbprogtv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/progtext"
+        android:layout_above="@+id/cbset2"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/cbprogsettv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cbset2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/progsettext" />
 </RelativeLayout>
