--- a/app/src/main/res/layout/activity_kitchen_main.xml
+++ b/app/src/main/res/layout/activity_kitchen_main.xml
@@ -1,28 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/kitchen_root_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sayadev.finalproject.kitchen.KitchenMainActivity">
+    tools:context="com.sayadev.finalproject.kitchen.KitchenMainActivity" >
+    <android.support.constraint.ConstraintLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" >
 
-    <ListView
-        android:id="@+id/device_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="parent" >
-    </ListView>
+        <ListView
+            android:id="@+id/device_list"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            tools:layout_editor_absoluteX="8dp" />
+
+        <ProgressBar
+            android:id="@+id/device_list_load_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_device_fab"
-        android:src="@android:drawable/ic_input_add"
-        android:tint="#fff"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="25dp" />
-
-</android.support.constraint.ConstraintLayout>
+        android:layout_gravity="bottom|right"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="#fff"
+        android:visibility="gone" />
+</android.support.design.widget.CoordinatorLayout>
