--- a/app/src/main/res/layout/dialog_kitchen_about_device.xml
+++ b/app/src/main/res/layout/dialog_kitchen_about_device.xml
@@ -5,6 +5,14 @@
     android:layout_height="fill_parent" >
 
     <TextView
+        android:id="@+id/about_kitchen_device_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="15dp"
+        android:textStyle="bold" />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
