--- a/app/src/main/res/layout/dialog_kitchen_add_device.xml
+++ b/app/src/main/res/layout/dialog_kitchen_add_device.xml
@@ -18,5 +18,12 @@
         android:layout_height="wrap_content"
         android:hint="@string/kitchen_add_device_model"
         android:inputType="text" />
+    
+    <Spinner
+        android:id="@+id/add_kitchen_device_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dialog">
+    </Spinner>
 
 </LinearLayout>
