--- a/app/src/main/res/layout/activity_blinding.xml
+++ b/app/src/main/res/layout/activity_blinding.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ScrollView"
         android:layout_width="fill_parent"
@@ -32,6 +34,12 @@
                 android:text=""
                 android:textAlignment="center"
                 android:textSize="24dp" />
+
+            <SeekBar
+                android:id="@+id/blindingSeek"
+                android:progress="0"
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
